include/odxclient.h

/*
 * odxclient — C ABI for the odxproxy client core (odxclient.dll).
 *
 * GENERATED by cbindgen from the Rust source — DO NOT EDIT BY HAND.
 * Regenerate: cbindgen --config cbindgen.toml --crate odxclient --output include/odxclient.h
 *
 * For C/C++ consumers only; the .NET binding uses [LibraryImport]. Target is
 * Windows x86_64 (x86_64-pc-windows-msvc). ClientInner / OdxRequest / OdxBuffer are
 * opaque handles — never dereference them. See IMPLEMENTATION-PLAN.md for lifecycle.
 */


#ifndef ODXCLIENT_H
#define ODXCLIENT_H

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

// Repr matches the C ABI (`int32_t`). Values are stable — the .NET mirror and
// any generated header depend on them.
enum OdxStatus
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : int32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
    OdxStatus_Ok = 0,
    OdxStatus_InvalidHandle = 1,
    OdxStatus_InvalidArgument = 2,
    OdxStatus_InvalidConfig = 3,
    OdxStatus_RuntimeUnavailable = 4,
    OdxStatus_LocalTimeout = 10,
    OdxStatus_ConnectError = 11,
    OdxStatus_TransportError = 12,
    OdxStatus_Cancelled = 13,
    OdxStatus_Unauthorized = 20,
    OdxStatus_BadRequest = 21,
    OdxStatus_Forbidden = 22,
    OdxStatus_UpstreamTimeout = 23,
    OdxStatus_UpstreamConnect = 24,
    OdxStatus_ProxyInternal = 25,
    OdxStatus_ServerError = 26,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum OdxStatus OdxStatus;
#else
typedef int32_t OdxStatus;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

// The opaque client the .NET side holds as `OdxClient*`.
typedef struct ClientInner ClientInner;

// Owns a response body buffer handed to the callback. Free via `odx_buffer_free`.
// Holds the reqwest `Bytes` directly (no copy) — the data pointer points into its
// heap buffer.
typedef struct OdxBuffer OdxBuffer;

// In-flight request handle. Shared (`Arc`) between the .NET side (one ref via
// `Arc::into_raw`, released by `odx_request_free`) and the spawned task (the
// other ref, dropped on completion). The .NET-held ref keeps this alive so
// `odx_cancel` is safe any time until `odx_request_free`.
typedef struct OdxRequest OdxRequest;

// Completion callback. Must be non-null. Invoked exactly once per submitted
// request, from a tokio worker thread. `data_ptr`/`owner` are null on transport
// failure or cancel. The callee takes ownership of `owner` and must free it with
// `odx_buffer_free`.
typedef void (*OdxCallback)(void *user_data,
                            OdxStatus status,
                            uint16_t http_status,
                            const uint8_t *data_ptr,
                            size_t data_len,
                            struct OdxBuffer *owner);

// Blittable construction config passed from .NET. All pointer/len pairs are
// borrowed only for the duration of `odx_client_create`.
typedef struct OdxClientConfig {
    const uint8_t *base_url_ptr;
    size_t base_url_len;
    const uint8_t *api_key_ptr;
    size_t api_key_len;
    // Sent as `x-request-timeout`; 0 = omit the header.
    uint32_t default_timeout_secs;
    // reqwest connect timeout; 0 = reqwest default.
    uint32_t connect_timeout_ms;
    // 0 = reqwest default.
    uint32_t pool_max_idle_per_host;
} OdxClientConfig;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

// Configure the global runtime before the first client is created.
// `worker_threads == 0` uses the default. Returns `InvalidArgument` if a runtime
// already exists.
OdxStatus odx_runtime_init(uint32_t worker_threads);

// Copies this thread's last error message (UTF-8) into `buf`, returning the full
// length in bytes (may exceed `cap`, indicating truncation). Only meaningful
// right after a function returned a non-Ok submit-time status on this thread.
size_t odx_last_error(uint8_t *buf, size_t cap);

// POST `/api/odoo/execute`. `body_ptr`/`body_len` is the full JSON request body;
// it is copied into Rust before returning. `timeout_secs` overrides the client
// default for this call (0 = use the client default). On success writes an owned
// request handle to `*out_request` (free with `odx_request_free`).
OdxStatus odx_execute(struct ClientInner *client,
                      const uint8_t *body_ptr,
                      size_t body_len,
                      uint32_t timeout_secs,
                      OdxCallback callback,
                      void *user_data,
                      struct OdxRequest **out_request);

// POST `/api/odoo/version`. Body is `{id, url}` (proxy `x-api-key` only, no Odoo
// creds). Same shape as `odx_execute`.
OdxStatus odx_get_version(struct ClientInner *client,
                          const uint8_t *body_ptr,
                          size_t body_len,
                          uint32_t timeout_secs,
                          OdxCallback callback,
                          void *user_data,
                          struct OdxRequest **out_request);

// GET `/_/license`. Flat body `{licensee, valid_until, is_valid}` (NOT a JSON-RPC
// envelope). Uses the client's default timeout.
OdxStatus odx_get_license(struct ClientInner *client,
                          OdxCallback callback,
                          void *user_data,
                          struct OdxRequest **out_request);

// GET `/_/about`. Body `{build, version}`.
OdxStatus odx_get_about(struct ClientInner *client,
                        OdxCallback callback,
                        void *user_data,
                        struct OdxRequest **out_request);

// GET `/_/metrics`. Prometheus text (not JSON) — still delivered as raw bytes.
OdxStatus odx_get_metrics(struct ClientInner *client,
                          OdxCallback callback,
                          void *user_data,
                          struct OdxRequest **out_request);

// Request cancellation of an in-flight call. Safe to call any time before
// `odx_request_free`; a no-op if the request already completed. The callback
// still fires exactly once, with status `Cancelled`. Null-safe.
void odx_cancel(struct OdxRequest *request);

// Release a request handle. Call exactly once. Ref-counted internally, so it is
// safe regardless of whether the in-flight task has completed. Null-safe.
void odx_request_free(struct OdxRequest *request);

// Free a response buffer handed to the callback. Null-safe; call exactly once.
void odx_buffer_free(struct OdxBuffer *owner);

// Create a client. On success writes an owned handle to `*out_client`; free it
// with `odx_client_free`. On failure returns a non-Ok status and sets the
// thread-local last error (retrieve with `odx_last_error`).
OdxStatus odx_client_create(const struct OdxClientConfig *cfg, struct ClientInner **out_client);

// Free a client handle. Null-safe. Drops the connection pool.
void odx_client_free(struct ClientInner *client);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* ODXCLIENT_H */